--- a/package.json
+++ b/package.json
@@ -1,22 +1,34 @@
 {
-  "name": "next-blog",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.0"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18"
-  }
+    "name": "next-blog",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev -p 3002",
+        "build": "next build",
+        "start": "next start -p 3002",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@prisma/client": "^5.11.0",
+        "autoprefixer": "^10.4.18",
+        "highlight.js": "^11.9.0",
+        "markdown-it": "^14.0.0",
+        "markdown-it-anchor": "^8.6.7",
+        "markdown-it-multimd-table": "^4.2.3",
+        "markdown-it-task-lists": "^2.1.1",
+        "markdown-it-toc-done-right": "^4.2.0",
+        "next": "14.1.0",
+        "prisma": "^5.11.0",
+        "react": "^18",
+        "react-dom": "^18",
+        "sass": "^1.71.1"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "postcss": "^8.4.35",
+        "tailwindcss": "^3.4.1",
+        "typescript": "^5"
+    }
 }
